--- a/widescreen.css
+++ b/widescreen.css
@@ -13,7 +13,7 @@
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
- 
+
   /* Position the tooltip text - see examples below! */
   position: absolute;
   z-index: 1;
@@ -22,7 +22,7 @@
 .tooltip .tooltiptext {
   width: 120px;
   bottom: 100%;
-  left: 50%; 
+  left: 50%;
   margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
 }
 
@@ -36,8 +36,9 @@
 }
 
 .log-actions {
-  border-bottom: 1px solid black; background-color: #f0f0f0;
-  box-shadow: inset 0px 2px 12px -5px rgba(0,0,0,0.75);
+  border-bottom: 1px solid black;
+  background-color: #f0f0f0;
+  box-shadow: inset 0px 2px 12px -5px rgba(0, 0, 0, 0.75);
 }
 
 .circleci-viewer-modal {
@@ -65,7 +66,6 @@
   padding-right: 30px !important;
 }
 
-
 .repository-content {
   width: 100% !important;
 }
@@ -92,7 +92,6 @@
   width: 50%;
 }
 
-
 .with-full-navigation {
   padding-right: 190px !important;
 }
@@ -100,7 +99,6 @@
 .with-full-navigation .repository-sidebar {
   margin-right: -190px !important;
 }
-
 
 .discussion-sidebar {
   width: 220px !important;
@@ -113,7 +111,6 @@
 .file-header::after {
   clear: left !important;
 }
-
 
 #dashboard,
 .new-issue-form {
@@ -135,12 +132,10 @@ button.discussion-sidebar-toggle {
   max-width: none !important;
 }
 
-
 .news {
   float: none !important;
   margin-right: 360px !important;
 }
-
 
 .settings-content,
 .repo-settings-content {
@@ -162,7 +157,6 @@ button.discussion-sidebar-toggle {
   padding-left: 30px !important;
   padding-right: 30px !important;
 }
-
 
 .u-photo .avatar {
   width: 230px !important;
